modified docs. more on the way

--- a/wdw/framework/.docs/fwtext.monkey.html
+++ b/wdw/framework/.docs/fwtext.monkey.html
@@ -5,10 +5,10 @@
 <meta content="es" http-equiv="Content-Language" />
 <meta content="text/html; charset=utf-8" http-equiv="Content-Type" />
 <link href="style.css" rel="stylesheet" type="text/css" />
-<title>emptytransition</title>
+<title>fwtext</title>
 </head>
 <body>
-<h3>emptytransition</h3><h3>Table of contents:</h3>Classes:<br><ul><li><a href='#7EmptyTransition'>EmptyTransition</a> <i>( Class EmptyTransition Implements Transition  ) </i> </li></ul><table style='width: 100%' id=7EmptyTransition><tr id=EmptyTransition><td class='tablehead' colspan='2'>Class EmptyTransition Implements Transition </td></tr><tr><td style='width:90px'>Description:</td><td>An empty game state transition.</td></tr><tr><td style='width:90px'>Table of contents:</td><td></td></tr></table><br />
+<h3>fwtext</h3><h3>Table of contents:</h3>Classes:<br><ul><li><a href='#11fwText'>fwText</a> <i>( Class fwText  ) </i> </li></ul><table style='width: 100%' id=11fwText><tr id=fwText><td class='tablehead' colspan='2'>Class fwText </td></tr><tr><td style='width:90px'>Description:</td><td>A simple bitmapfont class</td></tr><tr><td style='width:90px'>Table of contents:</td><td></td></tr></table><br />
 <p class="junglefooter">This document was generated using the <a href="http://www.jungleide.com/">Jungle IDE</a> document generator version 14.02.11-A</p>
 </body>
 </html>
