--- a/wdw/framework/state/transition/.docs/fadeintransition.monkey.html
+++ b/wdw/framework/state/transition/.docs/fadeintransition.monkey.html
@@ -5,10 +5,10 @@
 <meta content="es" http-equiv="Content-Language" />
 <meta content="text/html; charset=utf-8" http-equiv="Content-Type" />
 <link href="style.css" rel="stylesheet" type="text/css" />
-<title>transition.fadeintransition</title>
+<title>fadeintransition</title>
 </head>
 <body>
-<h3>transition.fadeintransition</h3><h3>Table of contents:</h3>Classes:<br><ul><li><a href='#9FadeInTransition'>FadeInTransition</a> <i>( Class FadeInTransition Implements Transition  ) </i> <br/></ul><table style='width: 100%' id=9FadeInTransition><tr id=FadeInTransition><td class='tablehead' colspan='2'>Class FadeInTransition Implements Transition </td></tr><tr><td style='width:90px'>Description:</td><td>A simple fade-in transition.</td></tr><tr><td style='width:90px'>Table of contents:</td><td></td></tr></table><br />
-<p class="junglefooter">This document was generated using the <a href="http://www.jungleide.com/">Jungle IDE</a> document generator version 12.10.01-B</p>
+<h3>fadeintransition</h3><h3>Table of contents:</h3>Classes:<br><ul><li><a href='#8FadeInTransition'>FadeInTransition</a> <i>( Class FadeInTransition Implements Transition  ) </i> </li></ul><table style='width: 100%' id=8FadeInTransition><tr id=FadeInTransition><td class='tablehead' colspan='2'>Class FadeInTransition Implements Transition </td></tr><tr><td style='width:90px'>Description:</td><td>A fade-in transition.</td></tr><tr><td style='width:90px'>Table of contents:</td><td></td></tr></table><br />
+<p class="junglefooter">This document was generated using the <a href="http://www.jungleide.com/">Jungle IDE</a> document generator version 14.02.11-A</p>
 </body>
 </html>
