--- a/wdw/framework/state/transition/.docs/fadeouttransition.monkey.html
+++ b/wdw/framework/state/transition/.docs/fadeouttransition.monkey.html
@@ -5,10 +5,10 @@
 <meta content="es" http-equiv="Content-Language" />
 <meta content="text/html; charset=utf-8" http-equiv="Content-Type" />
 <link href="style.css" rel="stylesheet" type="text/css" />
-<title>transition.fadeouttransition</title>
+<title>fadeouttransition</title>
 </head>
 <body>
-<h3>transition.fadeouttransition</h3><h3>Table of contents:</h3>Classes:<br><ul><li><a href='#10FadeOutTransition'>FadeOutTransition</a> <i>( Class FadeOutTransition Implements Transition  ) </i> <br/></ul><table style='width: 100%' id=10FadeOutTransition><tr id=FadeOutTransition><td class='tablehead' colspan='2'>Class FadeOutTransition Implements Transition </td></tr><tr><td style='width:90px'>Description:</td><td>A simple fade-in transition.</td></tr><tr><td style='width:90px'>Table of contents:</td><td></td></tr></table><br />
-<p class="junglefooter">This document was generated using the <a href="http://www.jungleide.com/">Jungle IDE</a> document generator version 12.10.01-B</p>
+<h3>fadeouttransition</h3><h3>Table of contents:</h3>Classes:<br><ul><li><a href='#9FadeOutTransition'>FadeOutTransition</a> <i>( Class FadeOutTransition Implements Transition  ) </i> </li></ul><table style='width: 100%' id=9FadeOutTransition><tr id=FadeOutTransition><td class='tablehead' colspan='2'>Class FadeOutTransition Implements Transition </td></tr><tr><td style='width:90px'>Description:</td><td>A fade-out transition.</td></tr><tr><td style='width:90px'>Table of contents:</td><td></td></tr></table><br />
+<p class="junglefooter">This document was generated using the <a href="http://www.jungleide.com/">Jungle IDE</a> document generator version 14.02.11-A</p>
 </body>
 </html>
