--- a/wdw/framework/state/transition/.docs/transition.monkey.html
+++ b/wdw/framework/state/transition/.docs/transition.monkey.html
@@ -5,10 +5,10 @@
 <meta content="es" http-equiv="Content-Language" />
 <meta content="text/html; charset=utf-8" http-equiv="Content-Type" />
 <link href="style.css" rel="stylesheet" type="text/css" />
-<title>transition.transition</title>
+<title>transition</title>
 </head>
 <body>
-<h3>transition.transition</h3><h3>Table of contents:</h3>Interfaces:<br><ul><li><a href='#5Transition'>Transition</a> <i>( Interface Transition  ) </i> <br/></ul><table style='width: 100%' id=5Transition><tr id=Transition><td class='tablehead' colspan='2'>Interface Transition </td></tr><tr><td style='width:90px'>Description:</td><td>Game state transition effect interface.</td></tr><tr><td style='width:90px'>Table of contents:</td><td></td></tr></table><br />
-<p class="junglefooter">This document was generated using the <a href="http://www.jungleide.com/">Jungle IDE</a> document generator version 12.10.01-B</p>
+<h3>transition</h3><h3>Table of contents:</h3>Interfaces:<br><ul><li><a href='#5Transition'>Transition</a> <i>( Interface Transition  ) </i> </li></ul><table style='width: 100%' id=5Transition><tr id=Transition><td class='tablehead' colspan='2'>Interface Transition </td></tr><tr><td style='width:90px'>Description:</td><td>Game state transition effect interface.</td></tr><tr><td style='width:90px'>Table of contents:</td><td></td></tr></table><br />
+<p class="junglefooter">This document was generated using the <a href="http://www.jungleide.com/">Jungle IDE</a> document generator version 14.02.11-A</p>
 </body>
 </html>
